--- a/shard.yml
+++ b/shard.yml
@@ -47,7 +47,7 @@ dependencies:
     version: ~> 0.13.0
 
   sqlite3:
-    github: crystal-lang/crystal-sqlite3
+    github: chi-vi/crystal-sqlite3
     version: ~> 0.18.0
 
   redis:
