--- a/shard.yml
+++ b/shard.yml
@@ -26,9 +26,8 @@ dependencies:
     github: elorest/compiled_license
     version: ~> 1.2.2
 
-
   micrate:
-    github: amberframework/micrate
+    github: chi-vi/micrate
     version: ~> 0.12.0
 
   shell-table:
